--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "delivery",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://us-central1-delivery-form-api.cloudfunctions.net/api/report",
   "dependencies": {
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-redux": "^6.0.0",
+    "react-scripts": "2.1.1",
+    "redux": "^4.0.1",
+    "redux-form": "^8.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
