--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-redux": "^6.0.0",
     "react-scripts": "2.1.1",
     "redux": "^4.0.1",
-    "redux-form": "^8.0.4"
+    "redux-form": "^8.0.4",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
